--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
            <button onclick="myFunction()" class="btn btn2"><i class="fa-solid fa-lightbulb"></i> Light mode</button>
             <nav>
-                <img src="/Images/blue.png" class="logo">
+                <img src="Images/blue.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
